Admin Panel added with download button added, question card scrolling overflow fixed, can save personal info to database

--- a/src/assets/scss/blk-design-system-react/custom/_pills.scss
+++ b/src/assets/scss/blk-design-system-react/custom/_pills.scss
@@ -146,6 +146,8 @@
 }
 .tab-space{
     padding: 20px 0 50px 0px;
+    height: 500px;
+    overflow: scroll;
 }
 
 .tab-content{
